--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/khangnguyen2100/cinema-max/issues"
   },
-  "homepage": "https://github.com/khangnguyen2100/cinema-max#readme",
-  "dependencies": {
-    "qrcode-generator": "^1.4.4"
-  }
+  "homepage": "https://github.com/khangnguyen2100/cinema-max#readme"
 }
